# tiny-xpu

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: pages.yml
onnx-plugin/: CMakeLists.txt  README.md
onnx-plugin/include/: tinyxpu_common.h  tinyxpu_driver.h  tinyxpu_ep.h  tinyxpu_perf.h
onnx-plugin/src/: tinyxpu_driver.cpp  tinyxpu_ep.cpp  tinyxpu_perf.cpp
onnx-plugin/test/: test_tinyxpu_ep.cpp  test_tinyxpu_ep.py
scripts/: create_onnx.py  matmul.py  matrix_decompositions.py  plot_roofline.py  run_bert_tiny.py  run_matmul.py  run_quickdraw.py  test_ops.py  tinyxpu_perf.py  train_quickdraw.py  xor.py
src/: array.sv  pe.sv  pe_col.sv  requant.sv
test/: test_array.py  test_col.py  test_pe.py
web/: index.html  nn.js  rendering.js  serve.js
